js/src/tests/test262/language/expressions/dynamic-import/syntax/invalid/nested-with-typeof-import-call-source-property.js
DONOTEVALUATE
(
)
;
with
(
{
}
)
{
typeof
import
.
source
.
UNKNOWN
;
}
